[gd_scene load_steps=18 format=3 uid="uid://b75u8dbglxgyb"]

[ext_resource type="Script" uid="uid://biy338spedu1n" path="res://source/client/gateway/ui/gateway_ui.gd" id="1_sp1hu"]
[ext_resource type="Script" uid="uid://bjqunluaxhpmg" path="res://source/client/gateway/ui/components/main_menu.gd" id="2_peqmd"]
[ext_resource type="Script" uid="uid://dqpkrccemhx6e" path="res://source/client/gateway/ui/components/login.gd" id="3_g4i0l"]
[ext_resource type="Script" uid="uid://bj01iog41cmn6" path="res://source/client/gateway/ui/components/create_account.gd" id="4_6rtum"]
[ext_resource type="Script" uid="uid://cc51j3yemgcy0" path="res://source/client/gateway/ui/components/world_selection/world_selection.gd" id="5_2q8vv"]
[ext_resource type="PackedScene" uid="uid://d0nrbmkjcp050" path="res://source/client/gateway/ui/components/world_selection/world_button/world_button.tscn" id="6_moax4"]
[ext_resource type="Script" uid="uid://1rk8dire0kor" path="res://source/client/gateway/ui/components/character_selection/character_selection.gd" id="7_ex74y"]
[ext_resource type="PackedScene" uid="uid://iu4w7gbcuqrp" path="res://source/client/gateway/ui/components/character_selection/character_slot_button.tscn" id="8_j42bt"]
[ext_resource type="Script" uid="uid://igav35nvj5yp" path="res://source/client/gateway/ui/components/character_creation/character_creation.gd" id="9_u2lk0"]
[ext_resource type="PackedScene" uid="uid://chsahf4074pcl" path="res://source/client/gateway/ui/components/character_creation/button/character_class_button.tscn" id="10_kgh0o"]
[ext_resource type="SpriteFrames" uid="uid://dkeeft051qhl3" path="res://source/common/resources/builtin/sprite_frames/rogue.tres" id="11_h7nlh"]
[ext_resource type="Resource" uid="uid://k07a0kqjgaem" path="res://source/common/resources/custom/character/character_collection/knight.tres" id="11_s3rpi"]
[ext_resource type="Resource" uid="uid://c51jc44s7nw01" path="res://source/common/resources/custom/character/character_collection/rogue.tres" id="12_5dck6"]
[ext_resource type="Script" uid="uid://dxa4rdqj1ukwb" path="res://source/client/gateway/ui/components/account_info.gd" id="13_i2c6x"]
[ext_resource type="Resource" uid="uid://7ha2uyyv6r5e" path="res://source/common/resources/custom/character/character_collection/wizard.tres" id="13_rinhs"]
[ext_resource type="Resource" uid="uid://c6lsfjv75kjph" path="res://source/common/resources/custom/character/character_collection/human.tres" id="14_x7y1p"]
[ext_resource type="PackedScene" uid="uid://dwmedgtqjoby3" path="res://source/client/gateway/ui/components/character_creation/human_customization_panel.tscn" id="15_fym21"]

[node name="GatewayUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sp1hu")

[node name="BackgroundRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.332881, 0.332881, 0.332881, 0.407843)

[node name="Main" type="Control" parent="." node_paths=PackedStringArray("login_menu", "create_account_menu")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_peqmd")
login_menu = NodePath("../Login")
create_account_menu = NodePath("../CreateAccount")

[node name="CenterContainer" type="CenterContainer" parent="Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="PanelContainer" parent="Main/CenterContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Main/CenterContainer/MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="VBoxContainer" parent="Main/CenterContainer/MainContainer/MarginContainer"]
layout_mode = 2

[node name="LoginButton" type="Button" parent="Main/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Login"

[node name="CreateAccountButton" type="Button" parent="Main/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Create account"

[node name="ConnectAsGuestButton" type="Button" parent="Main/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Connect as guest"

[node name="ResultLabel" type="Label" parent="Main/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="Login" type="Control" parent="." node_paths=PackedStringArray("previous_menu")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_g4i0l")
previous_menu = NodePath("../Main")

[node name="CenterContainer" type="CenterContainer" parent="Login"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="PanelContainer" parent="Login/CenterContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Login/CenterContainer/MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="VBoxContainer" parent="Login/CenterContainer/MainContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Login/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Login/CenterContainer/MainContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Account name"

[node name="LineEdit" type="LineEdit" parent="Login/CenterContainer/MainContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Login/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Login/CenterContainer/MainContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Password"

[node name="LineEdit" type="LineEdit" parent="Login/CenterContainer/MainContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="ResultLabel" type="Label" parent="Login/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="LoginButton" type="Button" parent="Login/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Login"

[node name="BackButton" type="Button" parent="Login/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="CreateAccount" type="Control" parent="." node_paths=PackedStringArray("previous_menu")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_6rtum")
previous_menu = NodePath("../Main")

[node name="CenterContainer" type="CenterContainer" parent="CreateAccount"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="PanelContainer" parent="CreateAccount/CenterContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CreateAccount/CenterContainer/MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="VBoxContainer" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Account name"

[node name="LineEdit" type="LineEdit" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Password"

[node name="LineEdit" type="LineEdit" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Password repeat"

[node name="LineEdit" type="LineEdit" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="ResultLabel" type="Label" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="CreateAccountButton" type="Button" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Create Account
"

[node name="BackButton" type="Button" parent="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="WorldSelection" type="Control" parent="." node_paths=PackedStringArray("character_selection_menu")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_2q8vv")
character_selection_menu = NodePath("../CharacterSelection")

[node name="CenterContainer" type="CenterContainer" parent="WorldSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WorldSelection/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="WorldSelection/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Choose a server:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="WorldSelection/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="ServerButton1" parent="WorldSelection/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_moax4")]
layout_mode = 2

[node name="ServerButton2" type="Button" parent="WorldSelection/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
focus_mode = 0
disabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="WorldSelection/CenterContainer/VBoxContainer/HBoxContainer/ServerButton2"]
layout_mode = 2
offset_right = 150.0
offset_bottom = 250.0

[node name="ServerName" type="Label" parent="WorldSelection/CenterContainer/VBoxContainer/HBoxContainer/ServerButton2/VBoxContainer"]
layout_mode = 2
text = "Witwitnds"
horizontal_alignment = 1

[node name="ServerRules" type="Label" parent="WorldSelection/CenterContainer/VBoxContainer/HBoxContainer/ServerButton2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Rules:
Hardcore
EXP +15%"
horizontal_alignment = 1

[node name="ServerLocation" type="Label" parent="WorldSelection/CenterContainer/VBoxContainer/HBoxContainer/ServerButton2/VBoxContainer"]
layout_mode = 2
text = "International"
horizontal_alignment = 1

[node name="ConfirmButton" type="Button" parent="WorldSelection/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Confirm"

[node name="CharacterSelection" type="Control" parent="." node_paths=PackedStringArray("next_menu")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_ex74y")
next_menu = NodePath("../CharacterCreation")

[node name="CenterContainer" type="CenterContainer" parent="CharacterSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaitingRect" type="ColorRect" parent="CharacterSelection/CenterContainer"]
visible = false
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
color = Color(0.228511, 0.228511, 0.228511, 0.843137)

[node name="Label" type="Label" parent="CharacterSelection/CenterContainer/WaitingRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -57.0
offset_right = 150.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
text = "Waiting for your characters info..."
horizontal_alignment = 1
visible_characters_behavior = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterSelection/CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="CharacterSlotButton" parent="CharacterSelection/CenterContainer/HBoxContainer" instance=ExtResource("8_j42bt")]
layout_mode = 2
size_flags_vertical = 4
text = "Create new character"

[node name="CharacterSlotButton2" parent="CharacterSelection/CenterContainer/HBoxContainer" instance=ExtResource("8_j42bt")]
custom_minimum_size = Vector2(175, 250)
layout_mode = 2
size_flags_vertical = 4
text = "smxn
class knight
Level 0"

[node name="CreateNewCharacter" type="Button" parent="CharacterSelection"]
custom_minimum_size = Vector2(220, 45)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 55.0
grow_horizontal = 2
text = "Create New Character"

[node name="CharacterCreation" type="Control" parent="." node_paths=PackedStringArray("class_description", "default_selection")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_u2lk0")
class_description = NodePath("CenterContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer3/Label")
default_selection = NodePath("CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button")

[node name="CenterContainer" type="CenterContainer" parent="CharacterCreation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterCreation/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterCreation/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ChooseClassLabel" type="Label" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Choose a starting class"
horizontal_alignment = 1

[node name="Button" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("10_kgh0o")]
layout_mode = 2
character_class = ExtResource("11_s3rpi")

[node name="Button2" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("10_kgh0o")]
layout_mode = 2
character_class = ExtResource("12_5dck6")

[node name="Button3" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("10_kgh0o")]
layout_mode = 2
character_class = ExtResource("13_rinhs")

[node name="Button4" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("10_kgh0o")]
layout_mode = 2
character_class = ExtResource("14_x7y1p")

[node name="VBoxContainer2" type="VBoxContainer" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CenterContainer"]
custom_minimum_size = Vector2(260, 260)
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CenterContainer/Control"]
scale = Vector2(4, 4)
sprite_frames = ExtResource("11_h7nlh")
animation = &"run"
frame_progress = 0.937406
centered = false

[node name="ResultMessageLabel" type="Label" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.760784, 0, 0, 1)
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Character name"

[node name="Button" type="Button" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "RNG"

[node name="CreateCharacterButton" type="Button" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.9, 1, 0.9, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Create Character"

[node name="ResultMessagePanel" type="PanelContainer" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/ResultMessagePanel"]
layout_mode = 2
alignment = 1

[node name="ResultMessageLabel" type="Label" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/ResultMessagePanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8, 0, 1)
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/ResultMessagePanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="HumanCustomizationPanel" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("15_fym21")]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Wizard
A master of elemental forces, commanding powerful spells to devastate enemies or support allies."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AccountInfo" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 142.0
grow_vertical = 0
script = ExtResource("13_i2c6x")

[node name="Label" type="Label" parent="AccountInfo"]
layout_mode = 2
text = "Account name: %s"

[node name="Label2" type="Label" parent="AccountInfo"]
layout_mode = 2
text = "Account ID: %s"

[node name="ConnectionStatusRect" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(480, 240)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -135.0
offset_right = 240.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.228511, 0.228511, 0.228511, 0.843137)

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectionStatusRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ConnectionStatusLabel" type="Label" parent="ConnectionStatusRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "Waiting for connection..."
horizontal_alignment = 1
visible_characters_behavior = 1

[node name="ConnectionStatusButton" type="Button" parent="ConnectionStatusRect/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "OK"

[connection signal="pressed" from="Main/CenterContainer/MainContainer/MarginContainer/HBoxContainer/LoginButton" to="Main" method="_on_login_button_pressed"]
[connection signal="pressed" from="Main/CenterContainer/MainContainer/MarginContainer/HBoxContainer/CreateAccountButton" to="Main" method="_on_create_account_button_pressed"]
[connection signal="pressed" from="Main/CenterContainer/MainContainer/MarginContainer/HBoxContainer/ConnectAsGuestButton" to="Main" method="_on_connect_as_guest_button_pressed"]
[connection signal="pressed" from="Login/CenterContainer/MainContainer/MarginContainer/HBoxContainer/LoginButton" to="Login" method="_on_login_button_pressed"]
[connection signal="pressed" from="Login/CenterContainer/MainContainer/MarginContainer/HBoxContainer/BackButton" to="Login" method="_on_back_button_pressed"]
[connection signal="pressed" from="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer/CreateAccountButton" to="CreateAccount" method="_on_create_account_button_pressed"]
[connection signal="pressed" from="CreateAccount/CenterContainer/MainContainer/MarginContainer/HBoxContainer/BackButton" to="CreateAccount" method="_on_back_button_pressed"]
[connection signal="pressed" from="WorldSelection/CenterContainer/VBoxContainer/ConfirmButton" to="WorldSelection" method="_on_confirm_button_pressed"]
[connection signal="text_changed" from="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/LineEdit" to="CharacterCreation" method="_on_line_edit_text_changed"]
[connection signal="pressed" from="CharacterCreation/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/Button" to="CharacterCreation" method="_on_rng_button_pressed"]
